...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEmptyState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp24"
        android:layout_margin="@dimen/dp12"
        app:cardCornerRadius="@dimen/dp6"
        app:layout_constraintTop_toTopOf="parent"
...
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        android:visibility="gone"
        tools:listitem="@layout/item_restaurant"/>

    <ProgressBar
        android:id="@+id/cpiLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
