<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp10"
    app:cardCornerRadius="@dimen/dp5"
    android:background="@color/background_card_gray">

    <TextView
        android:id="@+id/tvName"
        android:layout_margin="20dp"
        android:textAlignment="center"
        tools:text="La parrila del lago"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.cardview.widget.CardView>